--- a/DemoApp/WebContent/WEB-INF/web.xml
+++ b/DemoApp/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 
 	<servlet>
 		<servlet-name>abc</servlet-name>
-		<servlet-class>com.acmetech.AddServlet</servlet-class>
+		<servlet-class>com.acmetech.AddServlet2</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -13,7 +13,7 @@
 	
 	<servlet>
 		<servlet-name>pqr</servlet-name>
-		<servlet-class>com.acmetech.SqServlet</servlet-class>
+		<servlet-class>com.acmetech.SqServlet2</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -21,3 +21,5 @@
 		<url-pattern>/sq</url-pattern>
 	</servlet-mapping>
 </web-app>
+
+<!-- Note that you have to update the servlet class of SqServlet and AddServlet to work with requestDispatcher or sendRedirect -->
