--- a/DemoApp/WebContent/WEB-INF/web.xml
+++ b/DemoApp/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 
 	<servlet>
 		<servlet-name>abc</servlet-name>
-		<servlet-class>com.acmetech.AddServlet4</servlet-class>
+		<servlet-class>com.acmetech.TestAddServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -13,7 +13,7 @@
 	
 	<servlet>
 		<servlet-name>pqr</servlet-name>
-		<servlet-class>com.acmetech.SqServlet4</servlet-class>
+		<servlet-class>com.acmetech.TestSqServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
