servlet config and servlet context

--- a/DemoApp/WebContent/WEB-INF/web.xml
+++ b/DemoApp/WebContent/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
 
+	<!--
 	<servlet>
 		<servlet-name>abc</servlet-name>
 		<servlet-class>com.acmetech.TestAddServlet</servlet-class>
@@ -20,6 +21,34 @@
 		<servlet-name>pqr</servlet-name>
 		<url-pattern>/sq</url-pattern>
 	</servlet-mapping>
+	-->
+	
+	<display-name>DemoApp</display-name>
+	
+	<servlet>
+		<servlet-name>abc</servlet-name>
+		<servlet-class>com.acmetech.MyServlet</servlet-class>
+		
+		<init-param>
+			<param-name>name</param-name>
+			<param-value>Daniel</param-value>
+		</init-param>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>abc</servlet-name>
+		<url-pattern>/home</url-pattern>
+	</servlet-mapping>
+	
+	<context-param>
+		<param-name>name</param-name>
+		<param-value>John</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>phone</param-name>
+		<param-value>Honor</param-value>
+	</context-param>
 </web-app>
 
 <!-- Note that you have to update the servlet class of SqServlet and AddServlet to work with requestDispatcher, 
